[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unicommerce"
version = "0.1.0"
description = "Python SDK for the Unicommerce API"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]
