[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unicommerce"
version = "0.1.0"
description = "Python SDK for the Unicommerce API"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "unicommerce.resources.*"
disable_error_code = ["return-value"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
