[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unicommerce"
version = "0.1.0"
description = "Modern async-first Python SDK for the Unicommerce REST API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = []
keywords = ["unicommerce", "ecommerce", "api", "sdk", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Framework :: Pydantic :: 2",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/shbhnkr-sg/unicommerce-python-sdk"
Repository = "https://github.com/shbhnkr-sg/unicommerce-python-sdk"
Issues = "https://github.com/shbhnkr-sg/unicommerce-python-sdk/issues"

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "unicommerce.resources.*"
disable_error_code = ["return-value"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
